# sift

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: benchmark.rs  cli.rs  cli_output.rs  embeddings_generator.rs  hnsw.rs  index.rs  ingest.rs  language_specs.rs  main.rs  records.rs  ripgrep_bench.txt  search.rs  similarity.rs  treesitter_parse.rs
tests/: ingest_cli.rs
