[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fastembed = "5.13.4"
ignore = "0.4.25"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
syntect = "5.3.0"
tree-sitter = "0.26.8"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
